# Ins-Calibration

./: .gitignore  CMakeLists.txt  README.md  rplots.asv  rplots.m
data/: x_LN100_down.ins  x_LN100_up.ins  x_adi_down.txt  x_adi_up.txt
include/: calibration.h  correction.h  imu_statistics.h  reader.h  statistics.h
results/: ADI_Down_Mean.txt  ADI_Up_Mean.txt  LN100_Down_Mean.txt  LN100_Up_Mean.txt  MEMS_Down_Mean.txt  MEMS_Up_Mean.txt  RLG_Down_Mean.txt  RLG_Up_Mean.txt  mems_down_accel_corrected.txt  mems_down_gyro_corrected.txt  x_adi_down_corrected.txt
src/: calibration.cpp  correction.cpp  imu_statistics.cpp  main.cpp  reader.cpp  statistics.cpp
